[package]
name = "proxy_client_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
static_init = "1.0.3"
