[package]
name = "proxy_client_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
static_init = "1.0.3"
serde_yaml = "0.9.25"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.0", features = ["default", "json"] }
atomic-instant = "0.1.1"
rustelebot = "0.3.2"
